methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime16.SlugHunting'
override def run() {
             ^